<resources>
    <string name="app_name">ParkHunt</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login1">Login</string>
    <string name="login2">Login</string>
    <string name="new_to_parkhunt_register_here">New to ParkHunt? Register here!</string>

    <string name="name">Name</string>
    <string name="email_id">Email id</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_to_parkhunt">Welcome to ParkHunt</string>
    <string name="confrim_password">Confrim Password</string>

    <string name="title_activity_default">Default</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_type_none">None</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="search">Search</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
