<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saurabh.parkhunt.Login"
    android:id="@+id/Login">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:id="@+id/TFemail"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/TFemail"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"
        android:padding="10dp"
        android:id="@+id/TFpassword"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:background="#f9f4f4"
        android:textColor="@color/darkRed"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/login2"
        android:id="@+id/Butlogin"

        android:onClick = "Butlogin"
        android:layout_below="@+id/TFpassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_to_parkhunt_register_here"
        android:background="@null"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:id="@+id/NewReg"
        android:layout_below="@+id/Butlogin"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
