<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.saurabh.parkhunt.Register">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:id="@+id/etName"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:padding="10dp"
        android:hint= "Name"
        android:inputType="text"
         />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/etName"
        android:background="@color/white"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:padding="10dp"

        android:hint="@string/email_id"
        android:inputType="text"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/etEmail"
        android:background="@color/white"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:padding="10dp"

        android:id="@+id/etPassword"
        android:hint="@string/password"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"
        android:layout_below="@+id/etPassword"
        android:background="@color/white"
        android:textColor="@color/input_login"
        android:textColorHint="@color/input_login_hint"
        android:padding="10dp"

        android:id="@+id/etConfpass"
        android:hint="@string/confirm_password"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/register"

        android:background="#f9f4f4"
        android:textColor="@color/darkRed"
        android:textStyle="bold"

        android:layout_marginBottom="24dp"

        android:id="@+id/Register"
        android:onClick="onRegisterClick"
        android:layout_below="@+id/etConfpass"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
